dynamodel_tests/tests/ui/fails/attribute/invalid_rename_all.stderr
error: Invalid `rename_all` attribute value

         = note: "unknown" is not supported as `rename_all` value
         = help: Use one of the "lowercase", "UPPERCASE", "PascalCase", "camelCase", "snake_case", "SCREAMING_SNAKE_CASE", "kebab-case" and "SCREAMING-KEBAB-CASE"

 --> tests/ui/fails/attribute/invalid_rename_all.rs:4:26
  |
4 | #[dynamodel(rename_all = "unknown")]
  |                          ^^^^^^^^^
